# message_api

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  docker-image.yml
assets/: typography.css
docker/: Dockerfile  Dockerfile.base  Dockerfile.messages  Dockerfile.qr  message-api.yml  redis.yml
etc/nginx/: nginx.conf
etc/nginx/sites-available/: default
src/: barcodes.py  helpers.py  main.py  model.py  qr_frontend.py  security.py
src/frontends/: messages_viewer.py  qr_frontend.py
src/messages_frontend/: app.py
src/qr_frontend/: app.py
tests/: conftest.py  test_helpers.py  test_main.py  test_security.py
wordpress/: Nachrichten-Wand.php  README.md
