[tool.poetry]
name = "message-api"
version = "0.1.0"
description = "api for receiving and delivering messages"
authors = ["Albert Schulz <albert.schulz@posteo.de>"]
license = "GPL"
readme = "README.md"
packages = [{include = "message_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
