[tool.poetry]
name = "message-api"
version = "0.1.0"
description = "api for receiving and delivering messages"
authors = ["Albert Schulz <albert.schulz@posteo.de>"]
license = "GPL"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
redis = "^4.3.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pydantic = {extras = ["dontenv"], version = "^1.10.1"}
python-dotenv = "^0.21.0"
pytest-asyncio = "^0.19.0"
dash = "^2.6.1"
qrcode = "^7.3.1"
Pillow = "^9.2.0"
Authlib = "^1.1.0"
requests = "^2.28.1"
dash-bootstrap-components = "^1.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
